fix(announcements): set max-width and center align text content (#317)
* fix(announcements): set max-width of text content

* fix: align items center and match use of margins/paddings

* chore: remove extra line

--- a/_sass/components/homepage/_announcements.scss
+++ b/_sass/components/homepage/_announcements.scss
@@ -1,3 +1,9 @@
+.announcements-section {
+  max-width: $container-max-width;
+  flex-direction: column;
+  align-items: center;
+}
+
 .announcements-divider {
   height: 1px;
   color: #f9f9f9;
