--- a/_sass/theme/_breakpoints.scss
+++ b/_sass/theme/_breakpoints.scss
@@ -7,3 +7,6 @@ $breakpoints: (
   xl: 1280px,
   xxl: 1408px,
 );
+
+// Maximum width of site contents
+$container-max-width: 1280px;
